[package]
name = "easyshare"
version = "2.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["net", "time", "rt", "rt-multi-thread", "macros", "fs", "io-util"] }
uuid = { version = "1.23.0", features = ["v4"] }
local-ip-address = "0.6.11"
tauri-plugin-dialog = "2.6.0"
dirs = "6.0.0"
tauri-plugin-notification = "2.3.3"
walkdir = "2.5.0"
tauri-plugin-updater = "2.10.0"
lazy_static = "1.5.0"
tauri-plugin-single-instance = "2.4.0"

